Fixed alignment issues

--- a/src/app/home/home-page/home-page.component.scss
+++ b/src/app/home/home-page/home-page.component.scss
@@ -55,7 +55,7 @@ header {
                 text-decoration: none;
                 color: black;
                 font-weight: 500;
-                font-size: 15px;
+                font-size: 20px;
             }
 
             a:hover {
@@ -104,7 +104,7 @@ section {
             order: 2;
 
             h3 {
-                font-size: 60px;
+                font-size: 40px;
                 font-weight: 400;
                 line-height: 60px;
             }
@@ -225,7 +225,7 @@ section {
                 border-radius: 10px;
                 width: 22%;
                 // width: calc(40%);
-                height: 50vh;
+                height: 55vh;
 
                 .title {
                     margin-top: 30px;
@@ -254,7 +254,8 @@ section {
     }
 
     &#program {
-        height: 150vh;
+        height: 160vh;
+        // background-color: red;
 
         .grid {
             display: flex;
@@ -310,12 +311,13 @@ section {
         }
 
         .message {
-            margin-top: 10px;
+            margin-top: 30px;
             font-weight: 400;
             font-size: 18px;
         }
 
         .content {
+            margin-top: 30px;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -375,21 +377,22 @@ section {
     }
 
     &#mission {
-        margin: 0;
-        // padding: 0;
+        margin: 30px 0 50px 0;
+        padding: 0;
         height: 100vh;
         display: grid;
         align-items: center;
 
         .text-div {
             background-color: #AEFFFA;
-            height: 80vh;
+            height: 90vh;
             position: relative;
             z-index: 1;
 
             .mission-header {
-                text-align: center;
+                text-align: left;
                 margin: 30px;
+                margin-left: 80px;
 
                 h2 {
                     font-size: 35px;
@@ -421,7 +424,7 @@ section {
             }
 
             .mission-content {
-                padding: 0 40px;
+                padding: 0 0 0 80px;
                 text-align: justify;
                 margin-top: 0px;
                 max-height: 300px;
@@ -459,7 +462,7 @@ section {
         }
 
         .image-div {
-            height: 80vh;
+            height: 90vh;
             background-image: url('https://images.unsplash.com/photo-1603354351149-e97b9124020d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80');
             background-size: cover;
             background-position: center right;
@@ -469,6 +472,7 @@ section {
 
     &#testimonials {
         height: 100vh;
+        margin-top: 0;
 
         .grid {
             display: flex;
@@ -648,16 +652,22 @@ section {
             }
         }
 
-        .map {
-            border-radius: 10px;
-            width: 100%;
-            height: 80vh;
-            margin-top: 10px;
+        .content {
+            display: flex;
+            justify-content: center;
+
+            .map {
+                border-radius: 10px;
+                width: 80vw;
+                height: 80vh;
+                margin-top: 40px;
+            }
         }
     }
 }
 
 .footer {
+    margin-top: 30px;
     background-color: #FFE0FC;
     padding: 40px 0;
     border-top: 1px solid #ddd;
@@ -888,7 +898,7 @@ section {
         }
 
         &#program {
-            height: 190vh;
+            height: 210vh;
 
             .grid {
                 .text-div {
@@ -1286,7 +1296,7 @@ section {
         }
 
         &#program {
-            height: 120vh;
+            height: 135vh;
 
             .grid {
                 .text-div {
